cambios en main

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <meta name="description" content="Les contaremos un poco sobre nosotros y nuestra historia"/>
+  <meta name="description" content="Les contaremos un poco sobre nosotros y nuestra historia" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
@@ -16,54 +16,56 @@
 
 <body>
   <header>
-  <nav class="navbar navbar-expand-lg ">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">
-        <img src="../img/logoOfical.png" alt="logoOficial" width="150px">
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="../index.html" target="_blank">Inicio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="../pages/productos.html" target="_blank">Productos</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="../pages/nosotros.html" target="_blank">Nosotros</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="../pages/contacto.html" target="_blank">Contacto</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="../pages/preguntas.html" target="_blank">Preguntas</a>
-          </li>
-        </ul>
+    <nav class="navbar navbar-expand-lg ">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+          <img src="../img/logoOfical.png" alt="logoOficial" width="150px">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../pages/productos.html">Productos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="../pages/nosotros.html">Nosotros</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../pages/contacto.html">Contacto</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="../pages/preguntas.html">Preguntas</a>
+            </li>
+          </ul>
 
-        <form class="d-flex" role="search">
-          <form class="d-flex" role="Pedidos por Whatsapp">
-            <a class="botonWpp" href="#">Pedidos por Whatsapp</a>
+          <form class="d-flex" role="search">
+            <form class="d-flex" role="Pedidos por Whatsapp">
+              <a class="botonWpp" href="#">Pedidos por Whatsapp</a>
+            </form>
           </form>
-        </form>
+        </div>
       </div>
-    </div>
-  </nav>
+    </nav>
   </header>
   <main>
     <div class="content sau"></div>
     <div class="title-box">
       <h1>CONOCE MAS SOBRE NOSOTROS Y NUESTRA EMPRESA</h1>
-      </div>
+    </div>
     <div class="contenedor-box">
       <div class="box">
         <img src="../img/comunicacionn.jpg" alt="">
         <div class="contenedor-texto">
           <h2>MAS CERCA DE NOSOTROS,COMUNICACION VIA WHATSSAP</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui repellat odit numquam, voluptatum incidunt, ipsum assumenda quas aliquid sequi rem doloremque unde voluptate voluptatem ad, ea corporis ullam quibusdam beatae.</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui repellat odit numquam, voluptatum incidunt,
+            ipsum assumenda quas aliquid sequi rem doloremque unde voluptate voluptatem ad, ea corporis ullam quibusdam
+            beatae.</p>
         </div>
 
       </div>
@@ -102,38 +104,41 @@
         </div>
         <div class="colum2">
           <h6>Redes sociales</h6>
-          <div class="row">
-            <img src="../img/faceebook.png" alt="logoFacebook">
-            <label for="">SIGUENOS EN FACEBOOK</label>
-          </div>
-          <div class="row">
-            <img src="../img/instagram.png" alt="logoInstagram">
-            <label for="">SIGUENOS EN INSTAGRAM</label>
-          </div>
+
+          <form action="row">
+            <div class="row">
+              <img src="../img/faceebook.png" alt="logo Facebook">
+              <label for="">SIGUENOS EN FACEBOOK</label>
+            </div>
+            <div class="row">
+              <img src="../img/instagram.png" alt="logo Instagram">
+              <label for="">SIGUENOS EN INSTAGRAM</label>
+            </div>
         </div>
         <div class="colum3">
           <h6>Informacion contactos</h6>
-
           <div class="row2">
-            <img src="../img/celular.png" alt="iconoCelular">
+            <img src="../img/celular.png" alt="icono Celular">
             <label>5564-986789</label>
           </div>
           <div class="row2">
-            <img src="../img/location.png" alt="iconoLocacion">
+            <img src="../img/location.png" alt="icono Locacion">
             <label>9 de julio, San Francisco,Cordoba</label>
           </div>
           <div class="row2">
-            <img src="../img/gmail.png" alt="iconoGmail">
+            <img src="../img/gmail.png" alt="icono E-mail">
             <label>joseortega@gmail.com</label>
           </div>
+          </form>
         </div>
       </div>
     </div>
-    </div>
-  
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-      crossorigin="anonymous"></script>
+
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
