--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <meta name="description" content="Somos una empresa familiar,dedicada a brindar nuestro mejor servicio para nuestros clientes"/>
+  <meta name="description"
+    content="Somos una empresa familiar,dedicada a brindar nuestro mejor servicio para nuestros clientes" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   <link rel="stylesheet" href="css/estilo.css">
@@ -14,120 +15,119 @@
 
 <body>
   <header>
-  <nav class="navbar navbar-expand-lg ">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">
-        <img src="img/logoOfical.png" alt="logoOficial" width="150px">
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="index.html" target="_blank">Inicio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="pages/productos.html" target="_blank">Productos</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="pages/nosotros.html" target="_blank">Nosotros</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="pages/contacto.html" target="_blank">Contacto</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="pages/preguntas.html" target="_blank">Preguntas</a>
-          </li>
-        </ul>
+    <nav class="navbar navbar-expand-lg ">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+          <img src="img/logoOfical.png" alt="logoOficial" width="150px">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="pages/productos.html">Productos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="pages/nosotros.html">Nosotros</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="pages/contacto.html">Contacto</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="pages/preguntas.html">Preguntas</a>
+            </li>
+          </ul>
 
-        <form class="d-flex" role="search">
-          <form class="d-flex" role="Pedidos por Whatsapp">
-            <a class="botonWpp" href="#">Pedidos por Whatsapp</a>
+          <form class="d-flex" role="search">
+            <form class="d-flex" role="Pedidos por Whatsapp">
+              <a class="botonWpp" href="#">Pedidos por Whatsapp</a>
+            </form>
           </form>
-        </form>
+        </div>
       </div>
-    </div>
-  </nav>
+    </nav>
   </header>
-  
-    <div id="carouselExample" class="carousel slide ajustes">
-      <div class="carousel-texto">
+
+  <div id="carouselExample" class="carousel slide ajustes">
+    <div class="carousel-texto">
       <h1>DISTRIBUIDORA LA-BRI</h1>
-      </div>
-      <div class="carousel-inner ">
-        <div class="carousel-item active ">
-          <img src="img/quesosBlandos.png" class="d-block w-100" alt="quesosblandos">
-        </div>
-        <div class="carousel-item">
-          <img src="img/dulcedeleche.jpg" class="d-block w-100" alt="dulcedeleche">
-        </div>
-        <div class="carousel-item">
-          <img src="img/quesosUntables.png" class="d-block w-100" alt="quesountable">
-        </div>
-        <div class="carousel-item">
-          <img src="img/yogur_cuadrado.jpg" class="d-block w-100" alt="yogurt">
-        </div>
-
-      </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
     </div>
-  
+    <div class="carousel-inner ">
+      <div class="carousel-item active ">
+        <img src="img/quesosBlandos.png" class="d-block w-100" alt="quesosblandos">
+      </div>
+      <div class="carousel-item">
+        <img src="img/dulcedeleche.jpg" class="d-block w-100" alt="dulcedeleche">
+      </div>
+      <div class="carousel-item">
+        <img src="img/quesosUntables.png" class="d-block w-100" alt="quesountable">
+      </div>
+      <div class="carousel-item">
+        <img src="img/yogur_cuadrado.jpg" class="d-block w-100" alt="yogurt">
+      </div>
 
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
   <footer>
-    <footer>
-      <div class="container-footer-all">
-        <div class="container-body">
-          <div class="colum1">
-            <h6>Mas informacion de la empresa</h6>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam optio ea ipsum nobis quaerat provident
-              mollitia ullam omnis culpa recusandae! Velit incidunt dolorem reiciendis autem dolor tempora cumque ullam
-              perspiciatis!</p>
-          </div>
-          <div class="colum2">
-            <h6>Redes sociales</h6>
+    <div class="container-footer-all">
+      <div class="container-body">
+        <div class="colum1">
+          <h6>Mas informacion de la empresa</h6>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam optio ea ipsum nobis quaerat provident
+            mollitia ullam omnis culpa recusandae! Velit incidunt dolorem reiciendis autem dolor tempora cumque ullam
+            perspiciatis!</p>
+        </div>
+        <div class="colum2">
+          <h6>Redes sociales</h6>
+
+          <form action="row">
             <div class="row">
-              <img src="img/faceebook.png" alt="logoFacebook">
+              <img src="../img/faceebook.png" alt="logo Facebook">
               <label for="">SIGUENOS EN FACEBOOK</label>
             </div>
             <div class="row">
-              <img src="img/instagram.png" alt="logoInstagram">
+              <img src="../img/instagram.png" alt="logo Instagram">
               <label for="">SIGUENOS EN INSTAGRAM</label>
             </div>
+        </div>
+        <div class="colum3">
+          <h6>Informacion contactos</h6>
+          <div class="row2">
+            <img src="../img/celular.png" alt="icono Celular">
+            <label>5564-986789</label>
           </div>
-          <div class="colum3">
-            <h6>Informacion contactos</h6>
-  
-            <div class="row2">
-              <img src="img/celular.png" alt="iconoCelular">
-              <label>5564-986789</label>
-            </div>
-            <div class="row2">
-              <img src="img/location.png" alt="iconoLocacion">
-              <label>9 de julio, San Francisco,Cordoba</label>
-            </div>
-            <div class="row2">
-              <img src="img/gmail.png" alt="iconoGmail">
-              <label>joseortega@gmail.com</label>
-            </div>
+          <div class="row2">
+            <img src="../img/location.png" alt="icono Locacion">
+            <label>9 de julio, San Francisco,Cordoba</label>
           </div>
+          <div class="row2">
+            <img src="../img/gmail.png" alt="icono E-mail">
+            <label>joseortega@gmail.com</label>
+          </div>
+          </form>
         </div>
       </div>
-      </div>
-
-      </div>
-      </div>
+    </div>
 
   </footer>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
