--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -29,16 +29,16 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="../index.html" target="_blank">Inicio</a>
+              <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../pages/productos.html" target="_blank">Productos</a>
+              <a class="nav-link" href="../pages/productos.html">Productos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="../pages/nosotros.html" target="_blank">Nosotros</a>
+              <a class="nav-link active" aria-current="page" href="../pages/nosotros.html">Nosotros</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../pages/contacto.html" target="_blank">Contacto</a>
+              <a class="nav-link" href="../pages/contacto.html">Contacto</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="../pages/preguntas.html"
@@ -61,29 +61,27 @@
       <input type="Nombre" class="form-control" id="Nombre" placeholder="Nombre">
       <label for="text" class="form-label">APELLIDO</label>
       <input type="Apellido" class="form-control" id="Apellido" placeholder="Apellido">
-      <label for="text" class="form-label">GMAIL</label>
-      <input type="Gmail" class="form-control" id="Gmail" placeholder="Gmail"> 
+      <label for="text" class="form-label">E-MAIL</label>
+      <input type="E-mail" class="form-control" id="Gmail" placeholder="E-mail">
       <label for="text" class="form-label">ASUNTO</label>
       <input type="Asunto" class="form-control" id="Asunto" placeholder="Asunto">
       <label for="Mensaje" class="form-label">Mensaje</label>
       <textarea class="text" id="Mensaje" rows="3"></textarea>
       <div>
         <input class="botonenviar" type="submit" name="enviar" value="Enviar" />
+      </div>
     </div>
+    <div class="texto-contacto">
+      <h1>¡Encuentra nuestra direccion mas facil con este mapa!</h1>
+    </div>
+    <div class="map-responsive">
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3404.4983993588644!2d-62.10977538530591!3d-31.427943303954912!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95cb28430bdea2eb%3A0xd4455b74d7146e29!2sBv.%209%20de%20Julio%203797%2C%20San%20Francisco%2C%20C%C3%B3rdoba!5e0!3m2!1ses!2sar!4v1676492648557!5m2!1ses!2sar"
+        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
   </main>
-
-  <div class="texto-contacto">
-    <h1>¡Encuentra nuestra direccion mas facil con este mapa!</h1>
-  </div>
-  <div class="map-responsive">
-
-    <iframe
-      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3404.4983993588644!2d-62.10977538530591!3d-31.427943303954912!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95cb28430bdea2eb%3A0xd4455b74d7146e29!2sBv.%209%20de%20Julio%203797%2C%20San%20Francisco%2C%20C%C3%B3rdoba!5e0!3m2!1ses!2sar!4v1676492648557!5m2!1ses!2sar"
-      width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-      referrerpolicy="no-referrer-when-downgrade"></iframe>
-  </div>
-  </main>
+  
   <footer>
     <div class="container-footer-all">
       <div class="container-body">
@@ -95,36 +93,36 @@
         </div>
         <div class="colum2">
           <h6>Redes sociales</h6>
-          <div class="row">
-            <img src="../img/faceebook.png" alt="logoFacebook">
-            <label for="">SIGUENOS EN FACEBOOK</label>
-          </div>
-          <div class="row">
-            <img src="../img/instagram.png" alt="logoInstagram">
-            <label for="">SIGUENOS EN INSTAGRAM</label>
-          </div>
+
+          <form action="row">
+            <div class="row">
+              <img src="../img/faceebook.png" alt="logo Facebook">
+              <label for="">SIGUENOS EN FACEBOOK</label>
+            </div>
+            <div class="row">
+              <img src="../img/instagram.png" alt="logo Instagram">
+              <label for="">SIGUENOS EN INSTAGRAM</label>
+            </div>
         </div>
         <div class="colum3">
           <h6>Informacion contactos</h6>
-
           <div class="row2">
-            <img src="../img/celular.png" alt="iconoCelular">
+            <img src="../img/celular.png" alt="icono Celular">
             <label>5564-986789</label>
           </div>
           <div class="row2">
-            <img src="../img/location.png" alt="iconoLocacion">
+            <img src="../img/location.png" alt="icono Locacion">
             <label>9 de julio, San Francisco,Cordoba</label>
           </div>
           <div class="row2">
-            <img src="../img/gmail.png" alt="iconoGmail">
+            <img src="../img/gmail.png" alt="icono E-mail">
             <label>joseortega@gmail.com</label>
           </div>
+          </form>
         </div>
       </div>
     </div>
-    </div>
-    </div>
-    </div>
+
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous">
