--- a/index.html
+++ b/index.html
@@ -85,36 +85,36 @@
     <div class="container-footer-all">
       <div class="container-body">
         <div class="colum1">
-          <h6>Mas informacion de la empresa</h6>
+          <h2>Mas informacion de la empresa</h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam optio ea ipsum nobis quaerat provident
             mollitia ullam omnis culpa recusandae! Velit incidunt dolorem reiciendis autem dolor tempora cumque ullam
             perspiciatis!</p>
         </div>
         <div class="colum2">
-          <h6>Redes sociales</h6>
+          <h2>Redes sociales</h2>
 
           <form action="row">
             <div class="row">
-              <img src="../img/faceebook.png" alt="logo Facebook">
+              <img src="/img/faceebook.png" alt="logo Facebook">
               <label for="">SIGUENOS EN FACEBOOK</label>
             </div>
             <div class="row">
-              <img src="../img/instagram.png" alt="logo Instagram">
+              <img src="/img/instagram.png" alt="logo Instagram">
               <label for="">SIGUENOS EN INSTAGRAM</label>
             </div>
         </div>
         <div class="colum3">
-          <h6>Informacion contactos</h6>
+          <h2>Informacion contactos</h2>
           <div class="row2">
-            <img src="../img/celular.png" alt="icono Celular">
+            <img src="/img/celular.png" alt="icono Celular">
             <label>5564-986789</label>
           </div>
           <div class="row2">
-            <img src="../img/location.png" alt="icono Locacion">
+            <img src="/img/location.png" alt="icono Locacion">
             <label>9 de julio, San Francisco,Cordoba</label>
           </div>
           <div class="row2">
-            <img src="../img/gmail.png" alt="icono E-mail">
+            <img src="/img/gmail.png" alt="icono E-mail">
             <label>joseortega@gmail.com</label>
           </div>
           </form>
