--- a/index.html
+++ b/index.html
@@ -95,26 +95,26 @@
 
           <form action="row">
             <div class="row">
-              <img src="/img/faceebook.png" alt="logo Facebook">
+              <img src="img/faceebook.png" alt="logo Facebook">
               <label for="">SIGUENOS EN FACEBOOK</label>
             </div>
             <div class="row">
-              <img src="/img/instagram.png" alt="logo Instagram">
+              <img src="img/instagram.png" alt="logo Instagram">
               <label for="">SIGUENOS EN INSTAGRAM</label>
             </div>
         </div>
         <div class="colum3">
           <h2>Informacion contactos</h2>
           <div class="row2">
-            <img src="/img/celular.png" alt="icono Celular">
+            <img src="img/celular.png" alt="icono Celular">
             <label>5564-986789</label>
           </div>
           <div class="row2">
-            <img src="/img/location.png" alt="icono Locacion">
+            <img src="img/location.png" alt="icono Locacion">
             <label>9 de julio, San Francisco,Cordoba</label>
           </div>
           <div class="row2">
-            <img src="/img/gmail.png" alt="icono E-mail">
+            <img src="img/gmail.png" alt="icono E-mail">
             <label>joseortega@gmail.com</label>
           </div>
           </form>
