--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -56,21 +56,29 @@
     </nav>
   </header>
   <main>
-    <div class="formulario">
-      <label for="text" class="form-label">NOMBRE</label>
-      <input type="Nombre" class="form-control" id="Nombre" placeholder="Nombre">
-      <label for="text" class="form-label">APELLIDO</label>
-      <input type="Apellido" class="form-control" id="Apellido" placeholder="Apellido">
-      <label for="text" class="form-label">E-MAIL</label>
-      <input type="E-mail" class="form-control" id="Gmail" placeholder="E-mail">
-      <label for="text" class="form-label">ASUNTO</label>
-      <input type="Asunto" class="form-control" id="Asunto" placeholder="Asunto">
-      <label for="Mensaje" class="form-label">Mensaje</label>
-      <textarea class="text" id="Mensaje" rows="3"></textarea>
-      <div>
-        <input class="botonenviar" type="submit" name="enviar" value="Enviar" />
+
+
+
+    <div class="formulario2">
+      <h1>Formulario de contacto</h1>
+      <h2>Escríbenos y en breve los pondremos en contacto con vos</h2>
+      <div class="formulario">
+        <label for="text" class="form-label">NOMBRE</label>
+        <input type="Nombre" class="form-control" id="Nombre" placeholder="Nombre">
+        <label for="text" class="form-label">APELLIDO</label>
+        <input type="Apellido" class="form-control" id="Apellido" placeholder="Apellido">
+        <label for="text" class="form-label">E-MAIL</label>
+        <input type="E-mail" class="form-control" id="Gmail" placeholder="E-mail">
+        <label for="text" class="form-label">ASUNTO</label>
+        <input type="Asunto" class="form-control" id="Asunto" placeholder="Asunto">
+        <label for="Mensaje" class="form-label">MENSAJE</label>
+        <textarea class="text" id="Mensaje" rows="3"></textarea>
+        <div>
+          <input class="botonenviar" type="submit" name="enviar" value="Enviar" />
+        </div>
       </div>
     </div>
+
     <div class="texto-contacto">
       <h1>¡Encuentra nuestra direccion mas facil con este mapa!</h1>
     </div>
@@ -81,7 +89,7 @@
         referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
   </main>
-  
+
   <footer>
     <div class="container-footer-all">
       <div class="container-body">
