cambios en el formulario

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -56,38 +56,57 @@
     </nav>
   </header>
   <main>
+    <div class="formulario">
+      <h1 class="logo">¡Estamos mas cerca tuyo! contactanos</h1>
+      <div class="contacto animated bounceInUp">
+        <div class="contacto-form">
+          <form action="">
+            <p>
+              <label>Nombre</label>
+              <input type="text" name="fullname">
+            </p>
+            <p>
+              <label>Email</label>
+              <input type="email" name="email">
+            </p>
+            <p>
+              <label>Asunto</label>
+              <input type="Asunto" name="Asunto">
+            </p>
 
-
-
-    <div class="formulario2">
-      <h1>Formulario de contacto</h1>
-      <h2>Escríbenos y en breve los pondremos en contacto con vos</h2>
-      <div class="formulario">
-        <label for="text" class="form-label">NOMBRE</label>
-        <input type="Nombre" class="form-control" id="Nombre" placeholder="Nombre">
-        <label for="text" class="form-label">APELLIDO</label>
-        <input type="Apellido" class="form-control" id="Apellido" placeholder="Apellido">
-        <label for="text" class="form-label">E-MAIL</label>
-        <input type="E-mail" class="form-control" id="Gmail" placeholder="E-mail">
-        <label for="text" class="form-label">ASUNTO</label>
-        <input type="Asunto" class="form-control" id="Asunto" placeholder="Asunto">
-        <label for="Mensaje" class="form-label">MENSAJE</label>
-        <textarea class="text" id="Mensaje" rows="3"></textarea>
-        <div>
-          <input class="botonenviar" type="submit" name="enviar" value="Enviar" />
+            <p class="block">
+              <label>Mensaje</label>
+              <textarea name="mensaje" rows="3"></textarea>
+            </p>
+            <p class="block">
+              <button>
+                enviar
+              </button>
+            </p>
+          </form>
+        </div>
+        <div class="contacto-info">
+          <h4>Mas informacion</h4>
+          <ul>
+            <li><img src="../img/celular.png" alt="">3564-986789</li>
+            <li><img src="../img/location.png" alt="">9 de Julio, San Francisco</li>
+            <li><img src="../img/gmail.png" alt="">joseortega@gmail.com</li>
+          </ul>
         </div>
       </div>
-    </div>
 
-    <div class="texto-contacto">
-      <h1>¡Encuentra nuestra direccion mas facil con este mapa!</h1>
     </div>
-    <div class="map-responsive">
-      <iframe
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3404.4983993588644!2d-62.10977538530591!3d-31.427943303954912!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95cb28430bdea2eb%3A0xd4455b74d7146e29!2sBv.%209%20de%20Julio%203797%2C%20San%20Francisco%2C%20C%C3%B3rdoba!5e0!3m2!1ses!2sar!4v1676492648557!5m2!1ses!2sar"
-        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-        referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </div>
+  </main>
+
+  <div class="texto-contacto">
+    <h2>¡Encuentra nuestra direccion mas facil con este mapa!</h2>
+  </div>
+  <div class="map-responsive">
+    <iframe
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3404.4983993588644!2d-62.10977538530591!3d-31.427943303954912!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95cb28430bdea2eb%3A0xd4455b74d7146e29!2sBv.%209%20de%20Julio%203797%2C%20San%20Francisco%2C%20C%C3%B3rdoba!5e0!3m2!1ses!2sar!4v1676492648557!5m2!1ses!2sar"
+      width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+      referrerpolicy="no-referrer-when-downgrade"></iframe>
+  </div>
   </main>
 
   <footer>
