--- a/pages/preguntas.html
+++ b/pages/preguntas.html
@@ -13,7 +13,6 @@
 
     <link rel="stylesheet" href="../css/estilo.css">
 
-
 </head>
 
 <body>
@@ -59,25 +58,35 @@
     </header>
     <main>
         <div class="accordion accordion-flush" id="accordionFlushExample">
+            <h1>PREGUNTAS FRECUENTES</h1>
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="flush-headingThree">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                        ¿TRABAJAN CON UNA SOLA MARCA DE PRODUCTOS?
+                    </button>
+                </h2>
+                <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree"
+                    data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body">
+                        <p>Somos una empresa que elige trabajar con diferentes marcas de productos para que las personas puedan elegir entre calidad-precio, dependiendo su necesidad. 
+                        </p>
+                    </div>
+                </div>
+            </div>
             <div class="accordion-item">
                 <h2 class="accordion-header" id="flush-headingOne">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                         data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                        ¿Cómo se han fabricado los productos?
+                        ¿COMO SOLICITAR UN CAMBIO O REALIZAR UNA DEVOLUCION?
                     </button>
                 </h2>
                 <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
                     data-bs-parent="#accordionFlushExample">
                     <div class="accordion-body">
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iusto reprehenderit modi ipsa nobis
-                            accusantium sequi, neque accusamus voluptates officiis magni quam maxime excepturi, sapiente
-                            fuga quaerat illo laborum. Possimus, vel!lorem
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed veritatis aperiam magni
-                            similique qui repellendus, ullam ducimus assumenda fugit molestiae sit perspiciatis fuga cum
-                            ipsum amet, nostrum hic soluta! Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Quisquam, nesciunt atque. Beatae modi non doloribus. Nostrum rem sunt in placeat asperiores
-                            perspiciatis consequuntur ipsam libero? Earum exercitationem consectetur laborum poro.
-                        </p>.
+                        <p>
+                            Si has recibido un producto que presente fallas escríbenos dentro de los 7 días de recibido el producto a joseortega@gmail.com o comunicate via Whatssap con el boton que esta en el menu que te llevara directo a hablar con nosotros. Es muy importante que no consumas el producto y lo mantengas cerrado si queres realiza un cambio y manter refrigerado en la heladera. Según la particularidad de cada caso, si el mismo esta en mal estado, te enviaremos un producto de cambio o te devolveremos el dinero, a eleccion del cliente.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -85,46 +94,19 @@
                 <h2 class="accordion-header" id="flush-headingTwo">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                         data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                        ¿Venden productos con materia prima de primera calidad?
+                        ¿CUÁLES SON LOS MEDIOS DE PAGO DISPONIBLES?
                     </button>
                 </h2>
                 <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
                     data-bs-parent="#accordionFlushExample">
                     <div class="accordion-body">
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iusto reprehenderit modi ipsa nobis
-                            accusantium sequi, neque accusamus voluptates officiis magni quam maxime excepturi, sapiente
-                            fuga quaerat illo laborum. Possimus, vel!lorem
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed veritatis aperiam magni
-                            similique qui repellendus, ullam ducimus assumenda fugit molestiae sit perspiciatis fuga cum
-                            ipsum amet, nostrum hic soluta! Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Quisquam, nesciunt atque. Beatae modi non doloribus. Nostrum rem sunt in placeat asperiores
-                            perspiciatis consequuntur ipsam libero? Earum exercitationem consectetur laborum poro.
+                        <p>
+                            Tarjetas de crédito y débito adheridas a Mercado Pago y efectivo cuando lo reciben en sus casas o negocios.
                         </p>
                     </div>
                 </div>
             </div>
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="flush-headingThree">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                        ¿De dónde vienen los productos?
-                    </button>
-                </h2>
-                <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree"
-                    data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body">
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iusto reprehenderit modi ipsa nobis
-                            accusantium sequi, neque accusamus voluptates officiis magni quam maxime excepturi, sapiente
-                            fuga quaerat illo laborum. Possimus, vel!lorem
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed veritatis aperiam magni
-                            similique qui repellendus, ullam ducimus assumenda fugit molestiae sit perspiciatis fuga cum
-                            ipsum amet, nostrum hic soluta! Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Quisquam, nesciunt atque. Beatae modi non doloribus. Nostrum rem sunt in placeat asperiores
-                            perspiciatis consequuntur ipsam libero? Earum exercitationem consectetur laborum poro.
-                        </p>
-                    </div>
-                </div>
-            </div>
+            
         </div>
 
     </main>
