--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Nosotros somos</title>
   <meta name="description" content="Les contaremos un poco sobre nosotros y nuestra historia" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -59,13 +59,27 @@
       <h1>CONOCE MAS SOBRE NOSOTROS Y NUESTRA EMPRESA</h1>
     </div>
     <div class="contenedor-box">
+
+      <div class="box">
+        <img src="../img/apreton de manos.jpg" alt="">
+        <div class="contenedor-texto">
+          <h2>CONFIANZA CON NUESTROS CLIENTES</h2>
+          <p>Somos una empresa familiar con mas de 10 años en el rubro, principalmente la empresa
+           trataba sobre distintos lacteos como diversos queso, crema y embutidos.Luego fuimos creciendo y
+           logramos anexar mas productos debido a la demanda de nuestros clientes como snacks, mermeladas, dulces de leche, leche, yogures,aderezos,aceitunas,anchoas,etc.Gracias a todas las personas, nuestra dedicacion y esfuerzo que eso conlleva para empezar con un emprendimiento y lograr que crezca dia a dia, buscando siempre marcas de alimentos acordes a las necesidades de
+            nuestros clientes con su calidad-precio.</p>
+        </div>
+      </div>
       <div class="box">
         <img src="../img/comunicacionn.jpg" alt="">
         <div class="contenedor-texto">
           <h2>MAS CERCA DE NOSOTROS,COMUNICACION VIA WHATSSAP</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui repellat odit numquam, voluptatum incidunt,
-            ipsum assumenda quas aliquid sequi rem doloremque unde voluptate voluptatem ad, ea corporis ullam quibusdam
-            beatae.</p>
+          <p>En nuestro menu de navegacion podemos encontrar un boton con el nombre "Pedidos por Whatsapp" que te envia
+            directamente a nuestro numero y
+            Whatsapp, sirve para consultar y para que puedas realizar tu pedido si asi lo deseas, incluimos esta
+            herramienta a nuestra pagina para que nuestros clientes tengan un facil acceso para comunicarse con
+            nosotros.
+          </p>
         </div>
 
       </div>
@@ -74,22 +88,14 @@
         <img src="../img/envios.jpg" alt="">
         <div class="contenedor-texto">
           <h2>NUESTROS PRODUCTOS ENVIADOS A LA PUERTA DE TU CASA</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui repellat odit numquam, voluptatum incidunt,
-            ipsum assumenda quas aliquid sequi rem doloremque unde voluptate voluptatem ad, ea corporis ullam quibusdam
-            beatae.</p>
+          <p>Nuestra empresa se caracteriza por llevarte los productos directamente a tu hogar o negocio,
+            haciendo su pedido por whatsapp, el cliente puede elegir cualquiera de las opciones que tenemos
+            para que nuestros productos lleguen a donde lo desean y tambien pueden acercarse a nuestro local fisico
+            para cualquier consulta que tenga sobre nuestros productos o si quiere retirarlos personalmente.</p>
         </div>
 
       </div>
 
-      <div class="box">
-        <img src="../img/apreton de manos.jpg" alt="">
-        <div class="contenedor-texto">
-          <h2>CONFIANZA CON NUESTROS CLIENTES</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui repellat odit numquam, voluptatum incidunt,
-            ipsum assumenda quas aliquid sequi rem doloremque unde voluptate voluptatem ad, ea corporis ullam quibusdam
-            beatae.</p>
-        </div>
-      </div>
       </section>
   </main>
 
