--- a/pages/preguntas.html
+++ b/pages/preguntas.html
@@ -46,12 +46,9 @@
                                 target="_blank">Preguntas</a>
                         </li>
                     </ul>
-
-                    <form class="d-flex" role="search">
-                        <form class="d-flex" role="Pedidos por Whatsapp">
-                            <a class="botonWpp" href="#">Pedidos por Whatsapp</a>
-                        </form>
-                    </form>
+                    <div class="d-flex" role="search">
+                        <button class="botonWpp">Pedidos por Whatsapp</button>
+                    </div>
                 </div>
             </div>
         </nav>
@@ -69,7 +66,8 @@
                 <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree"
                     data-bs-parent="#accordionFlushExample">
                     <div class="accordion-body">
-                        <p>Somos una empresa que elige trabajar con diferentes marcas de productos para que las personas puedan elegir entre calidad-precio, dependiendo su necesidad. 
+                        <p>Somos una empresa que elige trabajar con diferentes marcas de productos para que las personas
+                            puedan elegir entre calidad-precio, dependiendo su necesidad.
                         </p>
                     </div>
                 </div>
@@ -85,7 +83,12 @@
                     data-bs-parent="#accordionFlushExample">
                     <div class="accordion-body">
                         <p>
-                            Si has recibido un producto que presente fallas escríbenos dentro de los 7 días de recibido el producto a joseortega@gmail.com o comunicate via Whatssap con el boton que esta en el menu que te llevara directo a hablar con nosotros. Es muy importante que no consumas el producto y lo mantengas cerrado si queres realiza un cambio y manter refrigerado en la heladera. Según la particularidad de cada caso, si el mismo esta en mal estado, te enviaremos un producto de cambio o te devolveremos el dinero, a eleccion del cliente.
+                            Si has recibido un producto que presente fallas escríbenos dentro de los 7 días de recibido
+                            el producto a joseortega@gmail.com o comunicate via Whatssap con el boton que esta en el
+                            menu que te llevara directo a hablar con nosotros. Es muy importante que no consumas el
+                            producto y lo mantengas cerrado si queres realiza un cambio y manter refrigerado en la
+                            heladera. Según la particularidad de cada caso, si el mismo esta en mal estado, te
+                            enviaremos un producto de cambio o te devolveremos el dinero, a eleccion del cliente.
                         </p>
                     </div>
                 </div>
@@ -101,12 +104,13 @@
                     data-bs-parent="#accordionFlushExample">
                     <div class="accordion-body">
                         <p>
-                            Tarjetas de crédito y débito adheridas a Mercado Pago y efectivo cuando lo reciben en sus casas o negocios.
+                            Tarjetas de crédito y débito adheridas a Mercado Pago y efectivo cuando lo reciben en sus
+                            casas o negocios.
                         </p>
                     </div>
                 </div>
             </div>
-            
+
         </div>
 
     </main>
@@ -114,28 +118,23 @@
         <div class="container-footer-all">
             <div class="container-body">
                 <div class="colum1">
-                    <h6>Mas informacion de la empresa</h6>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam optio ea ipsum nobis quaerat
-                        provident
-                        mollitia ullam omnis culpa recusandae! Velit incidunt dolorem reiciendis autem dolor tempora
-                        cumque ullam
-                        perspiciatis!</p>
-                </div>
+                    © 2023 LA-BRI todos los derechos reservados
+                  </div>
                 <div class="colum2">
-                    <h6>Redes sociales</h6>
-
+                    <h2>Redes sociales</h2>
                     <form action="row">
                         <div class="row">
-                            <img src="../img/faceebook.png" alt="logo Facebook">
+                            <a href="#"><img src="../img/faceebook.png" alt="logo Facebook"></a>
                             <label for="">SIGUENOS EN FACEBOOK</label>
                         </div>
                         <div class="row">
-                            <img src="../img/instagram.png" alt="logo Instagram">
+                            <a href="#"><img src="../img/instagram.png" alt="logo Instagram"></a>
                             <label for="">SIGUENOS EN INSTAGRAM</label>
                         </div>
+                    </form>
                 </div>
                 <div class="colum3">
-                    <h6>Informacion contactos</h6>
+                    <h2>Informacion contactos</h2>
                     <div class="row2">
                         <img src="../img/celular.png" alt="icono Celular">
                         <label>5564-986789</label>
