--- a/pages/productos.html
+++ b/pages/productos.html
@@ -44,12 +44,9 @@
               <a class="nav-link active" aria-current="page" href="../pages/preguntas.html">Preguntas</a>
             </li>
           </ul>
-
-          <form class="d-flex" role="search">
-            <form class="d-flex" role="Pedidos por Whatsapp">
-              <a class="botonWpp" href="#">Pedidos por Whatsapp</a>
-            </form>
-          </form>
+          <div class="d-flex" role="search">
+            <button class="botonWpp">Pedidos por Whatsapp</button>
+          </div>
         </div>
       </div>
     </nav>
@@ -128,26 +125,23 @@
     <div class="container-footer-all">
       <div class="container-body">
         <div class="colum1">
-          <h6>Mas informacion de la empresa</h6>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam optio ea ipsum nobis quaerat provident
-            mollitia ullam omnis culpa recusandae! Velit incidunt dolorem reiciendis autem dolor tempora cumque ullam
-            perspiciatis!</p>
+          © 2023 LA-BRI todos los derechos reservados
         </div>
         <div class="colum2">
-          <h6>Redes sociales</h6>
-
+          <h2>Redes sociales</h2>
           <form action="row">
             <div class="row">
-              <img src="../img/faceebook.png" alt="logo Facebook">
+              <a href="#"><img src="../img/faceebook.png" alt="logo Facebook"></a>
               <label for="">SIGUENOS EN FACEBOOK</label>
             </div>
             <div class="row">
-              <img src="../img/instagram.png" alt="logo Instagram">
+              <a href="#"><img src="../img/instagram.png" alt="logo Instagram"></a>
               <label for="">SIGUENOS EN INSTAGRAM</label>
             </div>
+          </form>
         </div>
         <div class="colum3">
-          <h6>Informacion contactos</h6>
+          <h2>Informacion contactos</h2>
           <div class="row2">
             <img src="../img/celular.png" alt="icono Celular">
             <label>5564-986789</label>
