--- a/pages/productos.html
+++ b/pages/productos.html
@@ -19,6 +19,7 @@
   <header>
     <nav class="navbar navbar-expand-lg ">
       <div class="container-fluid">
+       
         <a class="navbar-brand" href="#">
           <img src="../img/logoOfical.png" alt="logoOficial" width="150px">
         </a>
@@ -53,9 +54,10 @@
   </header>
   <main>
     <div class="content sau"></div>
+    <h1>NUESTROS PRODUCTOS</h1>
     <div class="contenedor-box">
       <div class="box">
-        <img src="../img/dulcedeleche.jpg" alt="">
+        <img src="../img/dulcedeleche.jpg" alt="Dulce de leche">
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye"
           viewBox="0 0 16 16">
           <path
@@ -65,7 +67,7 @@
       </div>
 
       <div class="box">
-        <img src="../img/quesosBlandos.png" alt="">
+        <img src="../img/quesopategrass.jpg" alt="Distintos tipos de queso">
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye"
           viewBox="0 0 16 16">
           <path
@@ -75,30 +77,7 @@
       </div>
 
       <div class="box">
-        <img src="../img/quesosUntables.png" alt="">
-
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye"
-          viewBox="0 0 16 16">
-          <path
-            d="M16 8s-3-5.5-8-5.5S0 8 0 8s3 5.5 8 5.5S16 8 16 8zM1.173 8a13.133 13.133 0 0 1 1.66-2.043C4.12 4.668 5.88 3.5 8 3.5c2.12 0 3.879 1.168 5.168 2.457A13.133 13.133 0 0 1 14.828 8c-.058.087-.122.183-.195.288-.335.48-.83 1.12-1.465 1.755C11.879 11.332 10.119 12.5 8 12.5c-2.12 0-3.879-1.168-5.168-2.457A13.134 13.134 0 0 1 1.172 8z" />
-          <path d="M8 5.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5zM4.5 8a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0z" />
-        </svg>
-
-      </div>
-      <div class="box">
-
-        <img src="../img/embutidos.jpg" alt="">
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye"
-          viewBox="0 0 16 16">
-          <path
-            d="M16 8s-3-5.5-8-5.5S0 8 0 8s3 5.5 8 5.5S16 8 16 8zM1.173 8a13.133 13.133 0 0 1 1.66-2.043C4.12 4.668 5.88 3.5 8 3.5c2.12 0 3.879 1.168 5.168 2.457A13.133 13.133 0 0 1 14.828 8c-.058.087-.122.183-.195.288-.335.48-.83 1.12-1.465 1.755C11.879 11.332 10.119 12.5 8 12.5c-2.12 0-3.879-1.168-5.168-2.457A13.134 13.134 0 0 1 1.172 8z" />
-          <path d="M8 5.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5zM4.5 8a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0z" />
-        </svg>
-
-
-      </div>
-      <div class="box">
-        <img src="../img/yogur_cuadrado.jpg" alt="">
+        <img src="../img/snacks.png" alt="Snack">
 
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye"
           viewBox="0 0 16 16">
@@ -109,7 +88,30 @@
 
       </div>
       <div class="box">
-        <img src="../img/57-QUESO-PATEGRAS-SANTA-MARIA.png" alt="">
+
+        <img src="../img/embutidos.jpg" alt="Distintos tipos de fiambres">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye"
+          viewBox="0 0 16 16">
+          <path
+            d="M16 8s-3-5.5-8-5.5S0 8 0 8s3 5.5 8 5.5S16 8 16 8zM1.173 8a13.133 13.133 0 0 1 1.66-2.043C4.12 4.668 5.88 3.5 8 3.5c2.12 0 3.879 1.168 5.168 2.457A13.133 13.133 0 0 1 14.828 8c-.058.087-.122.183-.195.288-.335.48-.83 1.12-1.465 1.755C11.879 11.332 10.119 12.5 8 12.5c-2.12 0-3.879-1.168-5.168-2.457A13.134 13.134 0 0 1 1.172 8z" />
+          <path d="M8 5.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5zM4.5 8a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0z" />
+        </svg>
+
+
+      </div>
+      <div class="box">
+        <img src="../img/aderezos.png" alt="Aderezos">
+
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye"
+          viewBox="0 0 16 16">
+          <path
+            d="M16 8s-3-5.5-8-5.5S0 8 0 8s3 5.5 8 5.5S16 8 16 8zM1.173 8a13.133 13.133 0 0 1 1.66-2.043C4.12 4.668 5.88 3.5 8 3.5c2.12 0 3.879 1.168 5.168 2.457A13.133 13.133 0 0 1 14.828 8c-.058.087-.122.183-.195.288-.335.48-.83 1.12-1.465 1.755C11.879 11.332 10.119 12.5 8 12.5c-2.12 0-3.879-1.168-5.168-2.457A13.134 13.134 0 0 1 1.172 8z" />
+          <path d="M8 5.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5zM4.5 8a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0z" />
+        </svg>
+
+      </div>
+      <div class="box">
+        <img src="../img/crema.png" alt="Crema">
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye"
           viewBox="0 0 16 16">
           <path
