--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contacto</title>
   <meta name="description"
-    content="Estamos para brindarle servicio y atencion a nuestros clientes para que disfruten de nuestros productos" />
+    content="Estamos para brindarle servicio y atención a nuestros clientes para que disfruten de nuestros productos" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
@@ -83,7 +83,7 @@
           </form>
         </div>
         <div class="contacto-info">
-          <h4>Mas informacion</h4>
+          <h3>Mas Información </h3>
           <ul>
             <li><img src="../img/celular.png" alt="">3564-986789</li>
             <li><img src="../img/location.png" alt="">9 de Julio, San Francisco</li>
@@ -125,25 +125,24 @@
             </div>
           </form>
         </div>
-        <div class="colum3">
-          <h2>Informacion contactos</h2>
-          <div class="row2">
-            <img src="../img/celular.png" alt="icono Celular">
-            <label>5564-986789</label>
-          </div>
-          <div class="row2">
-            <img src="../img/location.png" alt="icono Locacion">
-            <label>9 de julio, San Francisco,Cordoba</label>
-          </div>
-          <div class="row2">
-            <img src="../img/gmail.png" alt="icono E-mail">
-            <label>joseortega@gmail.com</label>
-          </div>
-          </form>
-        </div>
+        <form action="colum3">
+          <div class="colum3">
+            <h2>Información contactos</h2>
+            <div class="row2">
+              <img src="../img/celular.png" alt="icono Celular">
+              <label>3564-986789</label>
+            </div>
+            <div class="row2">
+              <img src="../img/location.png" alt="icono Locacion">
+              <label>9 de julio, San Francisco,Cordoba</label>
+            </div>
+            <div class="row2">
+              <img src="../img/gmail.png" alt="icono E-mail">
+              <label>joseortega@gmail.com</label>
+            </div>
+        </form>
       </div>
     </div>
-
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous">
