--- a/pages/preguntas.html
+++ b/pages/preguntas.html
@@ -119,7 +119,7 @@
             <div class="container-body">
                 <div class="colum1">
                     © 2023 LA-BRI todos los derechos reservados
-                  </div>
+                </div>
                 <div class="colum2">
                     <h2>Redes sociales</h2>
                     <form action="row">
@@ -133,25 +133,24 @@
                         </div>
                     </form>
                 </div>
-                <div class="colum3">
-                    <h2>Informacion contactos</h2>
-                    <div class="row2">
-                        <img src="../img/celular.png" alt="icono Celular">
-                        <label>5564-986789</label>
-                    </div>
-                    <div class="row2">
-                        <img src="../img/location.png" alt="icono Locacion">
-                        <label>9 de julio, San Francisco,Cordoba</label>
-                    </div>
-                    <div class="row2">
-                        <img src="../img/gmail.png" alt="icono E-mail">
-                        <label>joseortega@gmail.com</label>
-                    </div>
-                    </form>
-                </div>
+                <form action="colum3">
+                    <div class="colum3">
+                        <h2>Información contactos</h2>
+                        <div class="row2">
+                            <img src="../img/celular.png" alt="icono Celular">
+                            <label>3564-986789</label>
+                        </div>
+                        <div class="row2">
+                            <img src="../img/location.png" alt="icono Locacion">
+                            <label>9 de julio, San Francisco,Cordoba</label>
+                        </div>
+                        <div class="row2">
+                            <img src="../img/gmail.png" alt="icono E-mail">
+                            <label>joseortega@gmail.com</label>
+                        </div>
+                </form>
             </div>
         </div>
-
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous">
