--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <meta name="description"
-    content="Somos una empresa familiar,dedicada a brindar nuestro mejor servicio para nuestros clientes" />
+  <title>Inicio</title>
+  <meta name="description" content="Somos una empresa familiar dedicada a la distribucion de productos
+  lacteos y embutidos, brindando el mejor servicio para nuestros clientes.">
+
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   <link rel="stylesheet" href="css/estilo.css">
@@ -56,16 +57,16 @@
     </div>
     <div class="carousel-inner ">
       <div class="carousel-item active ">
-        <img src="img/quesosBlandos.png" class="d-block w-100" alt="quesosblandos">
+        <img src="img/quesosBlandos.png" class="d-block w-100" alt="Quesos blandos">
       </div>
       <div class="carousel-item">
-        <img src="img/dulcedeleche.jpg" class="d-block w-100" alt="dulcedeleche">
+        <img src="img/fiambrestacural.jpg" class="d-block w-100" alt="Fiambres">
       </div>
       <div class="carousel-item">
-        <img src="img/quesosUntables.png" class="d-block w-100" alt="quesountable">
+        <img src="img/quesosUntables.png" class="d-block w-100" alt="Quesos untables">
       </div>
       <div class="carousel-item">
-        <img src="img/yogur_cuadrado.jpg" class="d-block w-100" alt="yogurt">
+        <img src="img/yogur_cuadrado.jpg" class="d-block w-100" alt="Yogures">
       </div>
 
     </div>
@@ -97,28 +98,25 @@
             </div>
           </form>
         </div>
-        <div class="colum3">
-          <h2>Informacion contactos</h2>
-          <div class="row2">
-            <img src="img/celular.png" alt="icono Celular">
-            <label>5564-986789</label>
-          </div>
-          <div class="row2">
-            <img src="img/location.png" alt="icono Locacion">
-            <label>9 de julio, San Francisco,Cordoba</label>
-          </div>
-          <div class="row2">
-            <img src="img/gmail.png" alt="icono E-mail">
-            <label>joseortega@gmail.com</label>
-          </div>
-          
-        </div>
-
+        <form action="colum3">
+          <div class="colum3">
+            <h2>Información contactos</h2>
+            <div class="row2">
+              <img src="/img/celular.png" alt="icono Celular">
+              <label>3564-986789</label>
+            </div>
+            <div class="row2">
+              <img src="/img/location.png" alt="icono Locacion">
+              <label>9 de julio, San Francisco,Cordoba</label>
+            </div>
+            <div class="row2">
+              <img src="/img/gmail.png" alt="icono E-mail">
+              <label>joseortega@gmail.com</label>
+            </div>
+        </form>
       </div>
     </div>
-
   </footer>
-
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
