--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -45,7 +45,7 @@
           </ul>
           <div class="d-flex" role="search">
             <button class="botonWpp">Pedidos por Whatsapp</button>
-           </div>
+          </div>
         </div>
       </div>
     </nav>
@@ -58,7 +58,7 @@
     <div class="contenedor-box">
 
       <div class="box">
-        <img src="../img/apreton de manos.jpg" alt="">
+        <img src="../img/apreton de manos.jpg" alt="imagen saludos de manos">
         <div class="contenedor-texto">
           <h2>CONFIANZA CON NUESTROS CLIENTES</h2>
           <p>Somos una empresa familiar con mas de 10 años en el rubro, principalmente la empresa
@@ -71,7 +71,7 @@
         </div>
       </div>
       <div class="box">
-        <img src="../img/comunicacionn.jpg" alt="">
+        <img src="../img/comunicacionn.jpg" alt="imagen comunicacion">
         <div class="contenedor-texto">
           <h2>MAS CERCA DE NOSOTROS,COMUNICACION VIA WHATSSAP</h2>
           <p>En nuestro menu de navegacion podemos encontrar un boton con el nombre "Pedidos por Whatsapp" que te envia
@@ -85,7 +85,7 @@
       </div>
 
       <div class="box">
-        <img src="../img/envios.jpg" alt="">
+        <img src="../img/envios.jpg" alt="imagen de camion">
         <div class="contenedor-texto">
           <h2>NUESTROS PRODUCTOS ENVIADOS A LA PUERTA DE TU CASA</h2>
           <p>Nuestra empresa se caracteriza por llevarte los productos directamente a tu hogar o negocio,
@@ -118,25 +118,24 @@
             </div>
           </form>
         </div>
-        <div class="colum3">
-          <h2>Informacion contactos</h2>
-          <div class="row2">
-            <img src="../img/celular.png" alt="icono Celular">
-            <label>5564-986789</label>
-          </div>
-          <div class="row2">
-            <img src="../img/location.png" alt="icono Locacion">
-            <label>9 de julio, San Francisco,Cordoba</label>
-          </div>
-          <div class="row2">
-            <img src="../img/gmail.png" alt="icono E-mail">
-            <label>joseortega@gmail.com</label>
-          </div>
-          </form>
-        </div>
+        <form action="colum3">
+          <div class="colum3">
+            <h2>Información contactos</h2>
+            <div class="row2">
+              <img src="../img/celular.png" alt="icono Celular">
+              <label>3564-986789</label>
+            </div>
+            <div class="row2">
+              <img src="../img/location.png" alt="icono Locacion">
+              <label>9 de julio, San Francisco,Cordoba</label>
+            </div>
+            <div class="row2">
+              <img src="../img/gmail.png" alt="icono E-mail">
+              <label>joseortega@gmail.com</label>
+            </div>
+        </form>
       </div>
     </div>
-
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
