--- a/pages/productos.html
+++ b/pages/productos.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Productos</title>
-  <meta name="description"
-    content="Elegimos proveedores con materia prima de primera calidad para brindarle a nuestros clientes sus productos y revenderlos" />
+  <meta name="description" content="Elegimos proveedores con materia prima de primera calidad para brindarle a nuestros clientes
+     sus productos y revenderlos" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
@@ -19,7 +19,7 @@
   <header>
     <nav class="navbar navbar-expand-lg ">
       <div class="container-fluid">
-       
+
         <a class="navbar-brand" href="#">
           <img src="../img/logoOfical.png" alt="logoOficial" width="150px">
         </a>
@@ -67,7 +67,7 @@
       </div>
 
       <div class="box">
-        <img src="../img/quesopategrass.jpg" alt="Distintos tipos de queso">
+        <img src="../img/quesopategrass.jpg" alt="Queso pategras">
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye"
           viewBox="0 0 16 16">
           <path
@@ -130,7 +130,7 @@
           © 2023 LA-BRI todos los derechos reservados
         </div>
         <div class="colum2">
-          <h2>Redes sociales</h2>
+          <h2>Redes Sociales</h2>
           <form action="row">
             <div class="row">
               <a href="#"><img src="../img/faceebook.png" alt="logo Facebook"></a>
@@ -142,25 +142,24 @@
             </div>
           </form>
         </div>
-        <div class="colum3">
-          <h2>Informacion contactos</h2>
-          <div class="row2">
-            <img src="../img/celular.png" alt="icono Celular">
-            <label>5564-986789</label>
-          </div>
-          <div class="row2">
-            <img src="../img/location.png" alt="icono Locacion">
-            <label>9 de julio, San Francisco,Cordoba</label>
-          </div>
-          <div class="row2">
-            <img src="../img/gmail.png" alt="icono E-mail">
-            <label>joseortega@gmail.com</label>
-          </div>
-          </form>
-        </div>
+        <form action="colum3">
+          <div class="colum3">
+            <h2>Información contactos</h2>
+            <div class="row2">
+              <img src="../img/celular.png" alt="icono Celular">
+              <label>3564-986789</label>
+            </div>
+            <div class="row2">
+              <img src="../img/location.png" alt="icono Locacion">
+              <label>9 de julio, San Francisco,Cordoba</label>
+            </div>
+            <div class="row2">
+              <img src="../img/gmail.png" alt="icono E-mail">
+              <label>joseortega@gmail.com</label>
+            </div>
+        </form>
       </div>
     </div>
-
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
