ultimos cambios en la pagina

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -142,8 +142,8 @@
             </div>
           </form>
         </div>
-        <form action="colum3">
-          <div class="colum3">
+        <div class="colum3">
+          <form action="colum3">
             <h2>Información contactos</h2>
             <div class="row2">
               <img src="../img/celular.png" alt="icono Celular">
@@ -157,7 +157,8 @@
               <img src="../img/gmail.png" alt="icono E-mail">
               <label>joseortega@gmail.com</label>
             </div>
-        </form>
+          </form>
+        </div>
       </div>
     </div>
   </footer>
