--- a/index.html
+++ b/index.html
@@ -98,22 +98,24 @@
             </div>
           </form>
         </div>
-        <form action="colum3">
-          <div class="colum3">
+
+        <div class="colum3">
+          <form action="colum3">
             <h2>Información contactos</h2>
             <div class="row2">
-              <img src="/img/celular.png" alt="icono Celular">
+              <img src="img/celular.png" alt="icono Celular">
               <label>3564-986789</label>
             </div>
             <div class="row2">
-              <img src="/img/location.png" alt="icono Locacion">
+              <img src="img/location.png" alt="icono Locacion">
               <label>9 de julio, San Francisco,Cordoba</label>
             </div>
             <div class="row2">
-              <img src="/img/gmail.png" alt="icono E-mail">
+              <img src="img/gmail.png" alt="icono E-mail">
               <label>joseortega@gmail.com</label>
             </div>
-        </form>
+          </form>
+        </div>
       </div>
     </div>
   </footer>
