--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -125,8 +125,8 @@
             </div>
           </form>
         </div>
-        <form action="colum3">
-          <div class="colum3">
+        <div class="colum3">
+          <form action="colum3">
             <h2>Información contactos</h2>
             <div class="row2">
               <img src="../img/celular.png" alt="icono Celular">
@@ -140,7 +140,8 @@
               <img src="../img/gmail.png" alt="icono E-mail">
               <label>joseortega@gmail.com</label>
             </div>
-        </form>
+          </form>
+        </div>
       </div>
     </div>
   </footer>
